kubernetes/base/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app.kubernetes.io/name: fastapi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
